# metako

./: .gitignore  CLAUDE.md  Cargo.toml
crates/mtk/: Cargo.toml
crates/mtk/src/: browse.rs  error.rs  filetype.rs  filter_sort.rs  jobs.rs  lib.rs  preview.rs  repo_path.rs  sqlite.rs
crates/mtk/src/browse/: scanner.rs
crates/mtk/src/catalog/: db_entry.rs  edit.rs  enums.rs  generated_notes.rs  mod.rs  sqlite_catalog.rs
crates/mtk/src/file_tree/: abs_path.rs  file_tree.rs  fs_entry.rs  generated_file.rs  generated_tree.rs  metadata_file.rs  mod.rs
crates/mtk/src/jobs/: media_jobs.rs  misc_jobs.rs  registry.rs  runner.rs
crates/mtk/src/media/: ffmpeg.rs  image.rs  mod.rs  video.rs
crates/mtk/src/query/: mod.rs  sampler.rs  search.rs  surprise.rs
crates/mtk/src/save/: analyze.rs  download.rs  mod.rs  types.rs
crates/mtk/src/testing/: mod.rs
crates/mtk/src/userdata/: history_db.rs  mod.rs
crates/mtk/src/vault/: config.rs  mod.rs  vault.rs
crates/mtk/tests/: save_reddit.rs
crates/webui/: CLAUDE.md  Cargo.toml
crates/webui/src/: askama_tpl.rs  edit.rs  entry.rs  files.rs  filter_sort.rs  filter_sort_web.rs  history.rs  lib.rs  main.rs  preview.rs  query.rs  range_limited_file.rs  raw_file_responder.rs  save.rs
crates/webui/src/askama_tpl/: edit.rs  filters.rs  partial.rs  save.rs  template.rs
crates/webui/templates/: base.ask.html  dir_index.ask.html  dir_listing_partial.ask.html  entry_editor_partial.ask.html  entry_list.ask.html  history_partial.ask.html  parent_crumbs_partial.ask.html  view_entry.ask.html
desktop/: metako-mtk.desktop  (+1 more)
(+49 files in other folders)
