[package]
name = "mtk"
version = "0.0.0"
edition = "2024"

[lib]
name = "mtk"
path = "src/lib.rs"


[dependencies]
chrono = "0.4"
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"

# For catalog
rusqlite = { version = "0.36.0", features = ["bundled"] }

regex = "1.11.1"  # search
